# neurotools

./: .gitignore  LICENSE  README.md  models.py  modules.py  pyproject.toml  requirements.txt  setup.py  test.py  util.py
examples/: seachlight_simulation.ipynb
models/: global_l2l_mnist.pkl
neurotools/: ._util.py  __init__.py  decoding.py  embed.py  environments.py  generators.py  geometry.py  models.py  modules.py  stats.py  support.py  util.py
notebooks/: basic_test.ipynb  l2l.ipynb  test_map_decoder.ipynb  test_reverb.ipynb
tests/: logistic_decoder.py  stim_gen.py  test_dcgn.py  test_local_classification.py  test_modules.py  test_supervised_embed.py  test_utils.py
