[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version", "license", "readme"]
name = "neurotools"
description = "Cool tools for awesome science stuff."
authors = [
    { name = "Spencer R. Loggia", email = "spncer.loggia98@gmail.com" }
]
requires-python = ">=3.11"

dependencies = [
    "torch == 2.3.*",
    "matplotlib==3.7.*",
    "numpy == 1.25.*",
    "scipy==1.11.*",
    "pandas==2.0.*",
    "jupyter",
]

[tool.setuptools]
packages = ["neurotools"]